# nice-dice

./: .gitignore  Cargo.toml  LICENSE  README.md  app.js  build.sh  charts.min.css.do  charts.tar.gz.do  clean.do  demo.html  dist.dir.do  web.do
dicer-wasm/: Cargo.toml  build.sh
dicer-wasm/src/: bindings.rs  lib.rs
dicer-wasm/wit/: world.wit
nice-dice-component/: Cargo.toml
nice-dice-component/src/: lib.rs
nice-dice-component/wit/: world.wit
nice-dice-wasm/: Cargo.toml
nice-dice-wasm/src/: bindings.rs  lib.rs
proptest-regressions/: analysis.txt  lib.txt  parse.txt
src/: analysis.rs  discrete.rs  html.rs  lib.rs  math.rs  parse.rs  properties.rs  reduced.rs  symbolic.rs
src/symbolic/: types.rs
