[workspace]
members = [".", "./dicer-wasm"]

[package]
name = "dicer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.14.0"
maud = "0.27.0"
num = "0.4.3"
peg = "0.8.5"
thiserror = "2.0.12"

[dev-dependencies]
proptest = "1.7.0"
proptest-derive = "0.6.0"
