[workspace]
members = [".", "./nice-dice-component"]

[package]
name = "nice-dice"
version = "0.1.0"
edition = "2024"
description = "Parsing dice expressions and evaluating their distribution."
repository = "https://github.com/cceckman/nice-dice"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.14.0"
maud = "0.27.0"
num = { version = "0.4.3", default-features = false }
peg = "0.8.5"
thiserror = "2.0.12"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
proptest = "1.7.0"
proptest-derive = "0.6.0"
