[package]
name = "nice-dice-component"
version = "0.1.0"
edition = "2024"
workspace = ".."

[dependencies]
nice-dice = { version = "0.1.0", path = ".." }
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:nice-dice-wasm"

[package.metadata.component.dependencies]
